# Crispex

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_COMPLETE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: README.md  design.md  mvp.md  scope.md
examples/: README.md  basic_usage.py  filtering_guides.py  region_targeting.py  tutorial_01_beginner.py  tutorial_02_advanced.py  tutorial_03_cli.md
src/crispex/: __init__.py  api.py  cli.py
src/crispex/core/: __init__.py  extract.py  fetch.py  genome.py  guide.py  offtarget.py  predict.py  rank.py
src/crispex/utils/: __init__.py  errors.py  export.py  validate.py
tests/: __init__.py  test_extract.py  test_guide.py  test_integration.py  test_validate.py
