[metadata]
name = crispex
version = 0.1.0
author = Crispex Contributors
description = AI-powered CRISPR sgRNA design with ensemble ML and off-target detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/crispex
project_urls =
    Bug Tracker = https://github.com/yourusername/crispex/issues
    Documentation = https://github.com/yourusername/crispex#readme
    Source Code = https://github.com/yourusername/crispex
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    biopython>=1.79
    pandas>=1.3.0
    numpy>=1.21.0
    scikit-learn>=1.0.0
    requests>=2.26.0
    click>=8.0.0
    pyfaidx>=0.7.0
    tqdm>=4.62.0

[options.packages.find]
where = src
include = crispex*
exclude = tests*

[options.entry_points]
console_scripts =
    crispex = crispex.cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950
    build>=0.7.0
    twine>=3.8.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.eggs
ignore = E203,W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=crispex --cov-report=term-missing
